--- a/Project.toml
+++ b/Project.toml
@@ -15,4 +15,13 @@ PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
+ArrayInterface = "7"
+ArrayLayouts = "1"
+BandedMatrices = "1"
+ConcreteStructs = "0.2"
+LazyArrays = "1"
+LinearAlgebra = "1"
+MatrixFactorizations = "2"
+PrecompileTools = "1"
+Reexport = "1"
 julia = "1.9"
