--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ ArrayInterface = "7"
 ArrayLayouts = "1"
 BandedMatrices = "1"
 ConcreteStructs = "0.2"
-LazyArrays = "1"
+LazyArrays = "1, 2"
 LinearAlgebra = "1"
 MatrixFactorizations = "2"
 PrecompileTools = "1"
